[gd_scene load_steps=4 format=3 uid="uid://b3a20gkhn53i7"]

[ext_resource type="Script" path="res://Scenes/card.gd" id="1_3dxbq"]
[ext_resource type="Texture2D" uid="uid://bq4bv0gbrpjch" path="res://Sprites/Playing Cards Pixelart Asset Pack/Sprites/Clubs 1.png" id="1_r0cie"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_04xj0"]
size = Vector2(38, 27)

[node name="Card" type="CharacterBody2D"]
input_pickable = true
script = ExtResource("1_3dxbq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_04xj0")

[node name="Clubs1" type="Sprite2D" parent="."]
texture = ExtResource("1_r0cie")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
